<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">備忘錄</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_bar_hint">搜尋記事標題</string>
    <string name="batch_delete">批次刪除</string>
    <string name="query_after_date">依時間查詢</string>
    <string name="query_todos">待執行事項</string>
    <string name="searchIcon_dsp">搜尋icon</string>
    <string name="sample_btn">新增測試資料</string>
    <string name="delete_all_btn">刪除所有記事</string>
    <string name="deleteBatchStr">刪除</string>
    <string name="cancelDeleteAll">取消</string>
    <string name="returnBtnStr">返回</string>
    <string name="no_data_str">目前沒有記事</string>
    <string name="about_us">開發者的聯絡資訊</string>
    <string name="title_activity_main_activity_note">備忘錄</string>
    <string name="no_fit_search_item">沒有符合條件記事</string>
    <string name="copy_note">建立副本</string>
    <string name="note_title_should_not_null">標題不得為空</string>
    <string name="note_title_hint">請輸入記事標題</string>
    <string name="confirm_exec_time">確認</string>
    <string name="datetimepicker_title">選擇執行時間</string>
    <string name="confirm_btn_str">確認</string>
    <string name="execute_time_after_current_time_30_minutes">執行時間需要大於現在時間30分鐘</string>
    <string name="beforeLeaveEditView">是否放棄編輯?</string>
    <string name="cancelBtnStr">取消</string>

</resources>
