<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.searchviewdm.MainActivity" >
     <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/plus"
        android:title="add"/>
    <item
        android:id="@+id/action_delete_batch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/batch_delete"/>
	<item
        android:id="@+id/action_query_todos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/query_todos"/>
	<item
        android:id="@+id/action_query_after_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/query_after_date"/>
	<item
	    android:id="@+id/action_sample"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/sample_btn"
	    />
	<item
	    android:id="@+id/action_delete_all"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/delete_all_btn"
	    />
	<item
	    android:id="@+id/action_about_us"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/about_us"
	    />
</menu>
