<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#994d00"
    android:orientation="vertical"
    tools:context="com.note.main.MainActivity" >

	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="24dp" >

	     <EditText
	         android:id="@+id/searchBar"
	         android:layout_width="0dp"
	         android:layout_height="24dp"
	         android:layout_weight="6"
	         android:background="@drawable/rounded_edittext"
	         android:ems="10"
	         android:hint="@string/search_bar_hint"
	          >

	         <requestFocus />
	     </EditText>

	     <ImageButton
	         android:id="@+id/searchBtn"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:background="@drawable/rounded_imgbtn"
	         android:src="@drawable/search_24" 
	         android:contentDescription="@string/search_bar_hint"/>
	 </LinearLayout>

	<LinearLayout
	    android:id="@+id/specical_query"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal" 
	    android:visibility="gone">

	    <TextView
	        android:id="@+id/filerText"
	        android:layout_width="0dp"
	        android:layout_margin="5dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:text=""
	        android:textColor="#EFEFEF"
	        android:textSize="20sp" />

	    <Button
	        android:id="@+id/returnBtn"
	        android:layout_width="0dp"
	        android:layout_margin="5dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="#00FF00"
	        android:text="@string/returnBtnStr" />
	</LinearLayout>

    <ListView
        android:id="@+id/listitem"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:background="#eddf12" 
        android:layout_weight="1"
        >

    </ListView>

    <TextView
        android:id="@+id/no_data_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#eddf12"
        android:gravity="center"
        android:text="@string/no_fit_search_item"
        android:textSize="20sp" >

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/deleteBatchBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
           android:layout_gravity="bottom"
            android:background="#FF0000"
            android:text="@string/deleteBatchStr"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancelDeletebtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			 android:background="#00FF00"
            android:text="@string/cancelDeleteAll" 
            android:visibility="gone"/>

    </LinearLayout>

    
	
</LinearLayout>
